index.html improved

--- a/index.html
+++ b/index.html
@@ -1,16 +1,61 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Basic Metadata -->
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Title: Crucial for search ranking -->
+    <title>Official Photography Club | CUCEK | Cochin University College of Engineering Kuttanad</title>
+
+    <!-- SEO Meta Description: Encourages clicks from search results -->
+    <meta name="description" content="Welcome to the official website of the CUCEK Photography Club. Explore our gallery, learn about our events, and join a community of passionate photographers at Cochin University College of Engineering Kuttanad.">
+
+    <!-- Keywords: Helps search engines categorize your site -->
+    <meta name="keywords" content="CUCEK photography club, Cochin University, photography, student club, college photography, Kuttanad, CUSAT">
+
+    <!-- Canonical URL: Prevents duplicate content issues -->
+    <link rel="canonical" href="https://www.your-club-website.com/" />
+
+    <!-- Favicon -->
     <link rel="shortcut icon" href="src/assets/logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="src/assets/logo-apple.png">
+
+    <!-- Open Graph / Facebook Meta Tags for Social Sharing -->
+    <meta property="og:title" content="CUCEK Photography Club | Official Website" />
+    <meta property="og:description" content="Discover the creative work and events of the official photography club of Cochin University College of Engineering Kuttanad." />
+    <meta property="og:image" content="https://www.your-club-website.com/src/assets/social-media-banner.jpg" />
+    <meta property="og:url" content="https://www.your-club-website.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags for Social Sharing -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CUCEK Photography Club | Official Website" />
+    <meta name="twitter:description" content="Explore the gallery and activities of the CUCEK Photography Club." />
+    <meta name="twitter:image" content="https://www.your-club-website.com/src/assets/social-media-banner.jpg" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500;700&family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CPC</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- Structured Data (JSON-LD) for a College Club -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CollegeOrUniversity",
+      "name": "Cochin University College of Engineering Kuttanad Photography Club",
+      "url": "https://cucek-photography-club.vercel.app/",
+      "logo": "https://cucek-photography-club.vercel.app/src/assets/logo.png",
+      "parentOrganization": {
+        "@type": "CollegeOrUniversity",
+        "name": "Cochin University College of Engineering Kuttanad (CUCEK)"
+      }
+    }
+    </script>
   </body>
 </html>
